syntax = "proto3";

package shop.order.srv;

service Order{
    // 生成订单
    rpc CreateOrder(CSOrderCreate) returns (SCOrderCreate) {
    }
    // 确认订单
    rpc ConfirmOrder(CSOrderConfirm) returns (SCOrderConfirm) {
    }
}

// 订单数据
message OrderInfo{
    int64 orderId=1;
    int64 shopId=2;
    int64 num=3;
    int64 userId=4;
    int32 status=5;
    int64 money=6;
    int64 createTime=7;
}

// 错误码
message Error {
    int32 code=1;
    string detail=2;
}

// 生成订单请求
message CSOrderCreate{
    int64 shopId=1;
    int64 userId=2;
    int64 num=3;
}

message SCOrderCreate{
    Error error=1;
    OrderInfo info=2;
}

// 确认订单请求
message CSOrderConfirm{
    int64 orderId=1;
}

message SCOrderConfirm{
    Error error=1;
    OrderInfo info=2;
}